--- a/client/assets/styles/_utilities.styl
+++ b/client/assets/styles/_utilities.styl
@@ -23,6 +23,9 @@ hr
   text-transform uppercase
 .tr-title
   text-transform capitalize
+  
+.text-center
+  text-align center
 
 ::selection
   background #CEF3EC
