--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -39,7 +39,9 @@ body
   color $c-copy
   font-family $fn-primary
   
-[ng-click]
+[ng-click],
+[ui-sref],
+a
   cursor pointer
   
 .card
@@ -56,3 +58,198 @@ body
   pointer-events none
   position fixed
   width 100%
+  
+.fade
+  transition all 300ms ease
+.modal
+  align-items center
+  display flex !important
+  height 100%
+  left 0
+  justify-content center
+  position fixed
+  top 0
+  width 100%
+  .modal-dialog
+    box-shadow 0 1px 10px rgba(#8CA0B3, 0.3)
+    background white
+    border 1px solid $c-border
+    border-radius 2px
+    min-width 410px
+    overflow hidden
+    position relative
+    &:before,
+    &:after
+      content ''
+      display blockf
+      height 40px
+      left 0
+      pointer-events none
+      position absolute
+      width 100%
+      z-index 1
+    &:before
+      background linear-gradient(rgba(white, 1), rgba(white, 0))
+      top 0
+    &:after
+      background linear-gradient(rgba(white, 0), rgba(white, 1))
+      bottom 0
+    .fade-content
+      max-height 600px
+      overflow auto
+      padding ($padding * 2)
+  .description
+    color #8CA0B3
+    font-size 12px
+    margin-bottom 30px
+  .input-group
+    margin 0
+    padding 0
+    position relative
+    ol.fields
+      padding-left 15px
+    .add
+      padding-left 25px
+    input + textarea
+      margin-top 10px
+    textarea + .flex-row
+      margin-top 10px
+  .btn-group
+    margin-top 30px
+  .ctrl-sm
+    padding 0 ($padding / 2)
+  .implications
+    .wrap
+      padding-left $padding
+    ul
+      // border-bottom 1px solid $c-border
+      list-style none
+      margin 0
+      padding 0
+      & > li
+        cursor pointer
+        display inline-block
+        font-size 12px
+        margin 0
+        padding 0 $padding ($padding / 2)
+        position relative
+        &:first-of-type
+          margin-left -20px
+        &.active
+          color $c-blue
+          font-weight 500
+          &:before
+            background $c-blue
+            bottom -1px
+            content ""
+            height 2px
+            left 0
+            position absolute
+            right 0
+            width 100%
+.modal-backdrop
+  background white
+  height 100%
+  left 0
+  opacity 0.95
+  position fixed
+  top 0
+  width 100%
+  
+.project-content .project-content_section ul.slick-dots
+  list-style none
+  margin 0
+  padding 0
+  text-align center
+  li
+    display inline-block
+    margin 0 5px
+    button
+      appearance none
+      background transparent
+      box-shadow none
+      border 0
+      color white
+      cursor pointer
+      height 10px
+      outline 0
+      overflow hidden
+      padding 0
+      text-indent -9999px
+      &:before
+        background transparent
+        border-radius 8px
+        border 1px solid #9DACB9
+        content ''
+        display block
+        font-size 0
+        height 8px
+        opacity 1 !important
+        width 8px
+    &.slick-active button:before
+      background #9DACB9
+
+ul.list-bullet
+  list-style none
+  margin 0
+  padding 0
+  li
+    padding-left $padding
+    position relative
+    &:before
+      background #A1AEBB
+      border-radius 12px
+      content ""
+      display inline-block
+      height 12px
+      left 0
+      position absolute
+      top 3px
+      width 12px
+    &:after
+      background transparent
+      border 2px solid #F8F9FA
+      border-radius 4px
+      content ""
+      display inline-block
+      height 4px
+      left 2px
+      position absolute
+      top 5px
+      width 4px
+      
+.loading
+  background-size 100%
+  height 4px
+  left 0
+  opacity 0
+  pointer-events none
+  position fixed
+  top 40px
+  transition background-color 1s ease
+  width 100%
+  z-index 12
+  &.active
+    animation Loading 2s infinite alternate
+    background-color $c-teal
+    background-image linear-gradient(to left, rgba(white, 0.3), rgba(black, 0.3))
+    opacity 1
+  /*
+  &:before
+    animation Loading 2s infinite alternate
+    background-image linear-gradient(to left, $c-teal, darken($c-blue, 20%))
+    content ''
+    display block
+    height 100%
+    left 0
+    opacity 0
+    position absolute
+    transition opacity 300ms ease
+    top 0
+    width 100%
+  */
+@keyframes Loading
+  50%
+    background-color $c-blue
+  100%
+    background-color $c-teal
