--- a/client/app/new-project/Q4/question.jade
+++ b/client/app/new-project/Q4/question.jade
@@ -3,7 +3,10 @@
     #question-4
       span.question Recommended Research Method
         small Based on the parameters of your project, the following research method is likely the best fit.
-      .method-card(ng-repeat="method in q4.methods", ng-show="method.recommended", ng-class="{active: $project.method === method._id}", ng-click="$project.method = method._id")
+      .method-card(ng-repeat="method in q4.methods",
+        ng-show="method.recommended",
+        ng-class="{active: $project.method === method._id}",
+        ng-click="$project.method = method._id")
         span RECOMMENDED METHOD
         br
         strong {{method.title}}
@@ -25,7 +28,10 @@
             span LOCATION
             p.tr-title {{method.location}}
       span.alternate-methods ALTERNATE METHODS
-      .method-card(ng-repeat="method in q4.methods", ng-hide="method.recommended", ng-class="{active: $project.method === method._id}", ng-click="$project.method = method._id")
+      .method-card(ng-repeat="method in q4.methods | limitTo: 3",
+        ng-hide="method.recommended",
+        ng-class="{active: $project.method === method._id}",
+        ng-click="$project.method = method._id")
         strong {{method.title}}
         p {{method.description}}
         .meta.flex-row
