--- a/client/components/share/share.jade
+++ b/client/components/share/share.jade
@@ -1,43 +1,38 @@
 .share
-  .share_to
-    input(type="text", placeholder="Enter a name or email...", ng-model="invite")
+  .share_to: form(name="inviteNew", ng-submit="share.queueInvite({'email': share.to})")
+    input(type="text", placeholder="Enter a name or email...", ng-model="share.to")
+    input(type="submit", style="display: none")
+    .clear(ng-class="{in: share.to}", ng-click="share.clearTo()") &times;
   .share_list
-    .sl_item(ng-hide="project.users.length > 1")
+    .sl_item(ng-hide="share.$scope.$prjct.project.users.length > 1 || share.to.length || share.invitees.length")
       .avatar(data-initials="{{share.me.name | initials}}", ng-class="{'has-photo': share.me.photo}", style="background-image: url({{share.me.photo}})")
       .sli_content Only you have access to this project.
-    .sl_item(ng-repeat="user in users track by $index", ng-hide="user.permissions === 0 || invite || invitees.length", id="user-{{user.id}}")
-      .avatar(data-initials="{{user.initials}}", ng-class="{'has-photo': user.photo}", style="background-image: url({{user.photo}})")
+    .sl_item(ng-repeat="user in share.$scope.$prjct.project.users track by $index", ng-hide="share.$scope.$prjct.project.users.length <= 1 || share.to || invitees.length || user._id === share.me._id", id="user-{{user._id}}")
+      .avatar(data-initials="{{user.name | initials}}", ng-class="{'has-photo': user.photo}", style="background-image: url({{user.photo}})", ng-init="share.getProjectAccess(this)")
       .sli_content
         span.name {{user.name}}
         span.email {{user.email}}
-        span.controls(ng-click="editMode(user.id)", ng-class="{'edit-mode': edit === user.id}")
-          span.controls_status(ng-show="user.permissions === 1") CAN EDIT
-          span.controls_status(ng-show="user.permissions === 2 || user.permissions === 0") CAN VIEW
-          ul.controls_dropdown
-            li(ng-class="{active: user.permissions === 1}", ng-click="user.permissions = 1") CAN EDIT
-            li(ng-class="{active: user.permissions === 2}", ng-click="user.permissions = 2") CAN VIEW
-            li(ng-click="removeUser($index)") REMOVE
-    .sl_item.result(ng-show="invite", id="user-0", ng-click="queueInvite({'email': invite})")
+    .sl_item.result(ng-show="share.to.length", id="user-0", ng-click="share.queueInvite({'email': share.to})", ng-class="{invalid: share.error}")
       .avatar(data-initials="?")
-      .sli_content {{invite}}
-        span.controls(ng-click="editMode(0); $event.stopPropagation()", ng-class="{'edit-mode': edit === 0}")
-          span.controls_status(ng-show="user.permissions === 1") CAN EDIT
-          span.controls_status(ng-show="user.permissions != 1") CAN VIEW
-          ul.controls_dropdown
-            li(ng-class="{active: user.permissions === 1}", ng-click="user.permissions = 1") CAN EDIT
-            li(ng-class="{active: user.permissions === 2}", ng-click="user.permissions = 2") CAN VIEW
-    .sl_item.result(ng-repeat="user in contacts | filter: invite", ng-show="user.permissions === 0 && invite", id="user-{{user.id}}", ng-click="queueInvite(user)")
-      .avatar(data-initials="{{user.initials}}", ng-class="{'has-photo': user.photo}", style="background-image: url({{user.photo}})")
-      .sli_content 
+      .sli_content {{share.to}}
+    .sl_item.result(ng-repeat="user in share.users | filter: share.to", ng-show="share.to.length", id="user-{{user._id}}", ng-click="share.queueInvite(user)", )
+      {{share._.include(share.$scope.$prjct.project.users, user._id)}}
+      .avatar(data-initials="{{user.name | initials}}", ng-class="{'has-photo': user.photo}", style="background-image: url({{user.photo}})")
+      .sli_content
         span.name {{user.name}}
         span.email {{user.email}}
-        span.controls(ng-click="editMode(user.id); $event.stopPropagation()", ng-class="{'edit-mode': edit === user.id}")
-          span.controls_status CAN VIEW
-          ul.controls_dropdown
-            li(ng-class="{active: user.permissions === 1}", ng-click="user.permissions = 1") CAN EDIT
-            li(ng-class="{active: user.permissions === 2}", ng-click="user.permissions = 2") CAN VIEW
-  .share_invitees(ng-show="invitees.length")
-    .invitee(ng-repeat="user in invitees", ng-click="removeInvitee($index)") {{user.email}}
-  .share_footer.clearfix: .flex-row
+    .sl_item.result.invitee(ng-repeat="user in share.invitees track by $index", ng-show="share.invitees.length && !share.to")
+      .avatar(data-initials="{{user.name ? (user.name | initials) : '?'}}")
+      .sli_content {{user.email}}
+  .share_footer.clearfix(ng-show="share.invitees.length"): .flex-row
     input(type="text", placeholder="Enter a custom message...")
-    a.btn.btn-primary.btn-sm.pull-right(href="#") INVITE
+    a.btn.btn-secondary.btn-sm.pull-right(ng-click="share.cancelShare()") CANCEL
+    a.btn.btn-primary.btn-sm.pull-right(ng-click="share.sendInvite()") INVITE
+
+//- span.controls(ng-click="editMode(user.id)", ng-class="{'edit-mode': edit === user.id}")
+  span.controls_status(ng-show="user.permissions === 1") CAN EDIT
+  span.controls_status(ng-show="user.permissions === 2 || user.permissions === 0") CAN VIEW
+  ul.controls_dropdown
+    li(ng-class="{active: user.permissions === 1}", ng-click="user.permissions = 1") CAN EDIT
+    li(ng-class="{active: user.permissions === 2}", ng-click="user.permissions = 2") CAN VIEW
+    li(ng-click="removeUser($index)") REMOVE
